Bug 407708 - overview docker zooms in and bugs out if sampling from reference gotten from the reference tool
Summary: overview docker zooms in and bugs out if sampling from reference gotten from ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 4.1.7
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-19 02:56 UTC by levin.rojas2
Modified: 2019-05-24 10:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of after math, easily replicatable (313.68 KB, image/png)
2019-05-19 02:56 UTC, levin.rojas2
Details

Note You need to log in before you can comment on or make changes to this bug.
Description levin.rojas2 2019-05-19 02:56:59 UTC
Created attachment 120178 [details]
screenshot of after math, easily replicatable

SUMMARY
overview docker bugs out when sampling colors from refrences gotten from reference tool

STEPS TO REPRODUCE
1.have reference 
2. sample color from reference
3. use brush with picked color

OBSERVED RESULT Overview docker zooms in and gets pixelated
and the layer itself gets blocky and layer is erased in a patchy way

EXPECTED RESULT
it overview should not zoom in and show the whole drawing 
drawing itself should not bug out and show the base without layers in a patchy, pixelated manner
SOFTWARE/OS VERSIONS
Windows: windows 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 levin.rojas2 2019-05-19 03:03:30 UTC
weirdly enough if you scrawl a zig zag line across the whole picture it seems to fix the overview docker
Comment 2 Dmitry Kazakov 2019-05-23 11:40:44 UTC
Okay, I've managed to reproduce the bug, but on Linux only... For some reason, it works fine on Windows.
Comment 3 Dmitry Kazakov 2019-05-23 14:26:29 UTC
Git commit 223ac2d4715eee74edfebb4cc95ed58e0bbf883e by Dmitry Kazakov.
Committed on 23/05/2019 at 14:25.
Pushed by dkazakov into branch 'master'.

Fix artifacts when here is only one later + reference images

We should ensure that oblige-child mechanism works fine when
the stack has "fake" KisReferenceImagesLayer, which is never
rendered anywhere.
BACKPORT:krita/4.2

M  +5    -0    libs/image/kis_base_node.cpp
M  +7    -0    libs/image/kis_base_node.h
M  +1    -1    libs/image/kis_group_layer.cc
M  +4    -2    libs/image/kis_projection_leaf.cpp
M  +5    -0    libs/ui/flake/KisReferenceImagesLayer.cpp
M  +2    -0    libs/ui/flake/KisReferenceImagesLayer.h
M  +1    -1    libs/ui/kis_node_manager.cpp

https://invent.kde.org/kde/krita/commit/223ac2d4715eee74edfebb4cc95ed58e0bbf883e
Comment 4 Halla Rempt 2019-05-24 10:19:02 UTC
Git commit d8b1f424b92973b5330b4800e24876ec0f5d2ea7 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 24/05/2019 at 10:17.
Pushed by rempt into branch 'krita/4.2'.

Fix artifacts when here is only one later + reference images

We should ensure that oblige-child mechanism works fine when
the stack has "fake" KisReferenceImagesLayer, which is never
rendered anywhere.
BACKPORT:krita/4.2
(cherry picked from commit 223ac2d4715eee74edfebb4cc95ed58e0bbf883e)

M  +5    -0    libs/image/kis_base_node.cpp
M  +7    -0    libs/image/kis_base_node.h
M  +1    -1    libs/image/kis_group_layer.cc
M  +4    -2    libs/image/kis_projection_leaf.cpp
M  +5    -0    libs/ui/flake/KisReferenceImagesLayer.cpp
M  +2    -0    libs/ui/flake/KisReferenceImagesLayer.h
M  +1    -1    libs/ui/kis_node_manager.cpp

https://invent.kde.org/kde/krita/commit/d8b1f424b92973b5330b4800e24876ec0f5d2ea7