Fix artifacts when here is only one later + reference images

We should ensure that oblige-child mechanism works fine when
the stack has "fake" KisReferenceImagesLayer, which is never
rendered anywhere.

BUG:407708
BACKPORT:krita/4.2
(cherry picked from commit 223ac2d4715eee74edfebb4cc95ed58e0bbf883e)